...
  val date = remember { mutableStateOf(dateString) }

  val endDateString = event.endDate?.toDateString() ?: ""
  val endDate = remember { mutableStateOf(endDateString) }

  val tagString = event.tags.joinToString(separator = " ")
  val tag = remember { mutableStateOf(tagString) }

  val timeString = event.date?.toTimeString() ?: ""
  val time = remember { mutableStateOf(timeString) }

  val endTimeString = event.endDate?.toTimeString() ?: ""
  val endTime = remember { mutableStateOf(endTimeString) }
...
